force-app/main/default/objects/URLPopulatedFieldsConfiguration__c/URLPopulatedFieldsConfiguration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting will be used for storing field name and object name for which the fields can be defaulted to some values while creating new records.</description>
    <label>URL Populated Fields Configuration</label>
</CustomObject>