force-app/main/default/objects/URLPopulatedFieldsConfiguration__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <inlineHelpText>Please enter field API name</inlineHelpText>
    <label>Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>