force-app/main/default/objects/URLPopulatedFieldsConfiguration__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <inlineHelpText>Please enter object API name</inlineHelpText>
    <label>Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>