force-app/main/default/objects/URLPopulatedFieldsConfiguration__c/fields/Parent_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Field_Name__c</fullName>
    <inlineHelpText>Parent object field name from which you want to copy the data</inlineHelpText>
    <label>Parent Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>