force-app/main/default/objects/URLPopulatedFieldsConfiguration__c/fields/Parent_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Object_Name__c</fullName>
    <inlineHelpText>Enter parent object name from which you want to copy the field</inlineHelpText>
    <label>Parent Object Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>