force-app/main/default/objects/URLPopulatedFieldsConfiguration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Field_Name__c</columns>
    <columns>Object_Name__c</columns>
    <columns>Parent_Field_Name__c</columns>
    <columns>Parent_Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>